terraform/nat-gateway.tf
# Allocate an Elastic IP for the NAT Gateway
resource "aws_eip" "nat_eip" {

  domain = "vpc"

  tags = {
    Name = "employee-management-nat-eip"
  }

}

# Create the NAT Gateway in the Public Subnet
resource "aws_nat_gateway" "nat" {

  allocation_id = aws_eip.nat_eip.id

  subnet_id = aws_subnet.public_subnet.id

  depends_on = [
    aws_internet_gateway.igw
  ]

  tags = {
    Name = "employee-management-nat-gateway"
  }

}

# Add Internet access for the Private Route Table
resource "aws_route" "private_internet_access" {

  route_table_id = aws_route_table.private_rt.id

  destination_cidr_block = "0.0.0.0/0"

  nat_gateway_id = aws_nat_gateway.nat.id

}
